--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue-template",
+  "name": "datalogger-ui",
   "version": "0.0.0",
   "description": "A minimal Electron + Vue application",
   "main": "build/main/main.js",
@@ -21,13 +21,10 @@
     "chokidar": "^3.5.3",
     "electron": "^19.0.0",
     "electron-builder": "^23.0.3",
-    "naive-ui": "^2.32.1",
     "typescript": "^4.6.2",
-    "vfonts": "^0.0.3",
     "vite": "^2.9.9"
   },
   "dependencies": {
-    "electron-store": "^8.1.0",
     "vue": "^3.2.36"
   }
 }
